<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/merahp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/utama"
                    android:textColor="#FFFFFF"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:fontFamily="@font/p5hatty"
                    android:textSize="28dp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/leyot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/merahp2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView2"
            android:layout_width="173dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/splashlogo"
            app:civ_border_color="@color/putih"
            app:civ_border_width="3dp"
            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/p5hatty"
            android:text="@string/nama"
            android:textAlignment="center"
            android:textColor="@color/putih"
            android:textSize="38dp"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/p5hatty"
            android:text="@string/deskripsi"
            android:textAlignment="center"
            android:textColor="@color/putih"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView11"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/nmr"
            android:textColor="@color/putih"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:textSize="20dp"
            android:fontFamily="@font/p5hatty"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/putih"
            android:text="@string/imel"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:fontFamily="@font/p5hatty"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/putih"
            android:text="@string/instag"
            app:layout_constraintTop_toBottomOf="@id/textView14"
            android:fontFamily="@font/p5hatty"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/putih"
            android:text="@string/githap"
            app:layout_constraintTop_toBottomOf="@id/textView15"
            android:fontFamily="@font/p5hatty"
            android:textSize="20dp"/>
    </LinearLayout>

</LinearLayout>