<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/merahp2"
    tools:context=".datadiri">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="730dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/merahp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/batt"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:background="@drawable/abc_vector_test"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:layout_marginStart="14dp"
                    android:textColor="#FFFFFF"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:fontFamily="@font/p5hatty"
                    android:textSize="28dp"/>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView2"
            android:layout_width="173dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/splashlogo"
            app:civ_border_color="@color/putih"
            app:civ_border_width="3dp"
            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/p5hatty"
            android:text="@string/nama"
            android:textAlignment="center"
            android:textColor="@color/putih"
            android:textSize="38dp"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/p5hatty"
            android:text="@string/deskripsi"
            android:textAlignment="center"
            android:textColor="@color/putih"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView11"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/nmr"
            android:textColor="@color/putih"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:textSize="20dp"
            android:fontFamily="@font/p5hatty"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/putih"
            android:text="@string/imel"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:fontFamily="@font/p5hatty"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/putih"
            android:text="@string/instag"
            app:layout_constraintTop_toBottomOf="@id/textView14"
            android:fontFamily="@font/p5hatty"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@color/putih"
            android:text="@string/githap"
            app:layout_constraintTop_toBottomOf="@id/textView15"
            android:fontFamily="@font/p5hatty"
            android:textSize="20dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>