<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/merahp2"
    tools:context=".contacts">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="730dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/merahp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/batt"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:background="@drawable/abc_vector_test"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contacts"
                    android:layout_marginStart="14dp"
                    android:textColor="#FFFFFF"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:fontFamily="@font/p5hatty"
                    android:textSize="28dp"/>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/p5hatty"
                android:text="@string/nmr"
                android:textAlignment="center"
                android:textColor="@color/putih"
                android:textSize="28dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/gmail" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/p5hatty"
                android:text="@string/imel"
                android:textAlignment="center"
                android:textColor="@color/putih"
                android:textSize="28dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/ige" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/p5hatty"
                android:text="@string/instag"
                android:textAlignment="center"
                android:textColor="@color/putih"
                android:textSize="28dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/githap" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/p5hatty"
                android:text="@string/githap"
                android:textAlignment="center"
                android:textColor="@color/putih"
                android:textSize="28dp"
                app:layout_constraintTop_toBottomOf="@id/textView15" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>